--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  .black {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    background-color: red;  
+  }
 }
